--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <input type="text" placeholder="Enter city name" spellcheck="false">
                 <button><i class="fa-solid fa-magnifying-glass"></i></button>
             </div>
+            <div class="error">
+                <p>Invalid city name!</p>
+            </div>
             <div id="icon">
                 <img src="assets/sun.png" width="90px" height="90px">
             </div>
